task_3/deployment-with-nfs.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-with-nfs
spec:
  selector:
    matchLabels:
      app: test-web-app
  template:
    metadata:
      labels:
        app: test-web-app
    spec:
      containers:
        - name: test-web-app
          image: nginx
          volumeMounts:
            - name: nfs-data
              mountPath: /data
          command: ["/bin/sh"]
          args: ["-c", "while true; do echo $(date) >> /data/sample; sleep 10; done"]
      volumes:
        - name: nfs-data
          persistentVolumeClaim:
            claimName: nfs-share
