task_3/emptydir-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: emptydir-deployment
spec:
  selector:
    matchLabels:
      app: test-web-app
  template:
    metadata:
      labels:
        app: test-web-app
    spec:
      containers:
        - name: test-web-app
          image: nginx
          volumeMounts:
            - name: data
              mountPath: /data
          command: ["/bin/sh"]
          args: ["-c", "while true; do echo $(date) >> /data/sample; sleep 10; done"]
      volumes:
        - name: data
          emptyDir: {}    
      restartPolicy: Always
